--- a/index.html
+++ b/index.html
@@ -20,25 +20,25 @@
           <ul> <a href="./Internet Basics/Subtopic.html" >Internet Basics</a></ul>
         </div>
         <div class="row">
-          <ul>CSS 3</ul>
+          <ul><a href="./HTML5/index.html">HTML 5</a></ul>
         </div>
         <div class="row">
-          <ul>HTML 5</ul>
+          <ul><a href="./css3.html">CSS 3</a></ul>
         </div>
         <div class="row">
-          <ul>JavaScript Event handling and Form Validation</ul>
+          <ul><a href="./JavaScript_Basic_and_Objects.html">JavaScript Basics and Objects</a></ul>
         </div>
         <div class="row">
-          <ul>XML, XML Schemas, XML Stylesheet</ul>
+          <ul><a href="./js_event.html"> JavaScript Event handling and Form Validation</a></ul>
         </div>
         <div class="row">
-          <ul>Server Side Technologies: Servlet and JSP </ul>
+          <ul><a href="./XML.html"> XML, XML Schemas, XML Stylesheet</a></ul>
         </div>
         <div class="row">
-          <ul>Database Connectivity</ul>
+          <ul><a href="./server.html">Server Side Technologies: Servlet and JSP </a> </ul>
         </div>
         <div class="row">
-          <ul>JavaScript Basics and Objects</ul>
+          <ul><a href="./db.html"> Database Connectivity</a></ul>
         </div>
       </div>
     </div>
