--- a/Internet Basics/Subtopic.html
+++ b/Internet Basics/Subtopic.html
@@ -4,130 +4,140 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="Subtopic_style.css">
+    <title>Internet Basics</title>
 </head>
 <body>
-    <ul>Introduction</ul>
-    <p>The Internet is a global network comprised of smaller networks that are interconnected using standardized communication protocols. 
-        The Internet standards describe a framework known as the Internet protocol suite. This model divides methods into a layered system of
-protocols. It is a network of networks, that consists of millions of private, public, academic, business and government networks of local
-        to global scope</p></br>
-    <ul>History</ul>
-    <p>The history of the Internet has its origin from research and development in
-the United States and involved international collaboration, particularly with researchers
-in the United Kingdom and France.
- 1950 – Wide Area Networks
- 1960 – Packet switching network
- 1969 – ARPANET ( Advanced Research Projects Agency ) Defense research project -Root of Internet
- 1980 - Super computing center funded by National Science Foundation (NSF)
- 1982 – TCP/IP Formalized
- 1983 - Domain Name System
- 1988 – Open Systems Interconnection Model
- 1989 – Internet goes commercial by Internet Service Provider (ISP)
- 1989-90- World Wide Web (WWW) linking hypertext by Tim Berners Lee
- 1994 - Amazon.com ; Google January 1996
- 2000’s – Skype, Facebook,Youtube, Twitter, Dropbox,etc</p></br>
-    <ul>People And Organization</ul>
-<p>No one person, company, organization or government runs the Internet. It is a globally distributed network comprising many voluntarily interconnected autonomous networks.
- ISOC is a voluntary membership organization whose purpose is to
-promote global information exchange through Internet technology.
- ISOC appoints the IAB- Internet Architecture Board. They meet
-regularly to review standards and allocate resources, like addresses.
- IETF- Internet Engineering Task Force. Another volunteer
-organization that meets regularly to discuss operational and technical
-problems.Internet services were launched in India on 15th August, 1995 by Videsh
-Sanchar Nigam Limited. In November, 1998, the Government opened
-    up the sector for providing Internet services by private operators.</p></br>
-    <ul>layered architicture</ul>
-<p>MODERN USES OF INTERNET
-The internet can be accessed almost anywhere by numerous means including mobile internet services...
-The Internet allows computer users to remotely access other computers and information stores easily, wherever they may
-    be.<p></br>
-    <ul>IP-TCP</ul>
-<p>IP Protocol
-•a simple protocol for attempting to send data between two computers
-•each device has a 32-bit IP address written as four 8-bit numbers (0-255)
-•find out your internet IP address: whatismyip.com
-•find out your local IP address:
-•in a terminal, type: ipconfig (Windows) or ifconfig (Mac/Linux)</p></br>
-<p>Transmission Control Protocol (TCP)
- adds multiplexing, guaranteed message delivery on top of IP
- multiplexing: multiple programs using the same IP address
- port: a number given to each program or service
- port 80: web browser (port 443 for secure browsing)
- port 25: email
- port 22: ssh
- port 5190: AOL Instant Messenger
- more common ports
- some programs (games, streaming media programs) use
-simpler UDP protocol instead of TCP.
- UDP is faster than TCP, Connectionless, Unreliable 
-  communication and used for sending short messages</p>
-    <ul>WWW - World wide web</ul>
-<p>World Wide Web
- The Web is a only way to access information through the Internet.
- The world wide web is a sophisticated system for universal
-information capture and delivery.
- The Web is a large number of computer documents or "Web
-pages" that are stored on computers around the world and are
-connected to one another using hyperlinks. These Web pages can be
-seen by anyone through their computer's "Web Browser," which is
-the program you are using now.
- A group of Web pages that follow the same theme and are connected
-together with hyperlinks is called a "Web site." Web sites and Web
-pages are written in a coding language that makes it possible to add
-pictures, sound and interactivity to plain old text, making people's
-reading experience more exciting</p>
-    <ul>Web server and browsers</ul>
-<p>Web Servers 
- A web server is a computer with special software to host web
-pages and web applications.
- A web server serves web pages to clients across the Internet or
-an Intranet. The web server hosts the pages, scripts, programs,
-and multimedia files and serves them using HTTP, a protocol
-designed to send files to web browsers and other protocols.
- A number of server-side technologies can be used to increase
-the power of the server beyond its ability to deliver standard
-HTML pages.
- These include CGI scripts, server-side includes, SSL security,
-and Active Server Pages(ASPs)
-</p></br>
-<p>Web browsers 
- Web browsers are programs used to explore the
-Internet. Software that creates a unique hypermedia-
-based menu on your computer screen and provides a
-graphical interface to the Web.
- There are many Web browser programs available
-including Netscape Navigator, Internet Explorer and
-Opera, Google Chrome, Mozilla Firefox.</p>
-    <ul>Web Protocols</ul>
-<p>A protocol is simply a standard for enabling the connection, communication,and data transfer between two places on a network. Here are some of the keyprotocols that are used for transferring data across the Internet.
- HTTP : Hypertext Transfer Protocol. It is the standard protocol fortransferring web pages (and their content) across the Internet.
- HTTPS : Hypertext Transfer Protocol over Secure Socket Layer (SSL). For awebsite to use HTTPS it needs to have an SSL certificate installed on theserver. These are usually issued by a trusted 3rd party, referred to as aCertificate Authority (CA). When you browse a web page using HTTPS, youcan check the details of the SSL certificate. For example, you could check thevalidity of it.
- FTP : File Transfer Protocol. It is used to transfer files across the Internet.FTP is commonly used by web developers to publish updates to a website(i.e. to upload a new version of the website).
- Every HTTP request also uses TCP and IP. The Web is just one of theapplications built on top of the Internet protocols</p>
-    <ul>DNS - URL</ul>
-<p>DNS
- The domain name system (DNS) gives us humans an easy way to 
-identify where we want to go on the Internet.
- Behind the scenes, each domain name maps to an IP address. When 
-we type a URL in the address bar of our browser, the computer has 
-to figure out its IP address.
-  Consider the website:
- blog.gardeningknowhow.com
- That URL leads to the blog of a gardening tips & tricks 
-website.
- First level domain – com
- Third level domain – blog</p>
-<p>URL
-    A Uniform Resource Locator (URL), colloquially termed a web address,[1]
-    is a reference to a web resource that specifies its location on a computer network and a mechanism for retrieving it. 
-    A URL is a specific type of Uniform Resource Identifier (URI),[2][3] although many people use the two terms interchangeably.[4][a]
-    URLs occur most commonly to reference web pages (http) but are also used for file transfer (ftp), email (mailto), database access (JDBC), and many other applications.
-
-Most web browsers display the URL of a web page above the page in an address bar.
-A typical URL could have the form http://www.example.com/index.html, which indicates a protocol (http), a hostname (www.example.com), and a file name (index.html).</p>
-    <ul>Web standerds</ul>
-    <ul>Audience Requirements</ul>
+	<h1>INTERNET BASICS</h1>
+	</br>
+	<center>
+		<img src="ibimg.jpg" alt="Internet Basics" style="width:250px;height:250px;">
+	</center>
+	<br>
+	<h4>Introduction</h4>
+	<p>
+		The Internet is a global network comprised of smaller networks that are interconnected using standardized communication protocols. The Internet standards describe a framework known as the Internet protocol suite. This model divides methods into a layered system of protocols. It is a network of networks, that consists of millions of private, public, academic, business and government networks of local to global scope.
+	</p>
+	</br>
+    	<h4>History</h4>
+    	<p>
+		The history of the Internet has its origin from research and development in the United States and involved international collaboration, particularly with researchers in the United Kingdom and France.
+		<ul>
+			<li>1950 – Wide Area Networks</li>
+			<li>1960 – Packet switching network</li>
+			<li>1969 – ARPANET ( Advanced Research Projects Agency ) Defense research project -Root of Internet</li>
+			<li>1980 - Super computing center funded by National Science Foundation (NSF)</li>
+			<li>1982 – TCP/IP Formalized</li>
+			<li>1983 - Domain Name System</li>
+			<li>1988 – Open Systems Interconnection Model</li>
+			<li>1989 – Internet goes commercial by Internet Service Provider (ISP)</li>
+			<li>1989-90- World Wide Web (WWW) linking hypertext by Tim Berners Lee</li>
+			<li>1994 - Amazon.com ; Google January 1996</li>
+			<li>2000’s – Skype, Facebook,Youtube, Twitter, Dropbox,etc</li>
+		</ul>
+	</p>
+	</br>
+    	<h4>People and Organization</h4>
+	<p>
+		No one person, company, organization or government runs the Internet. It is a globally distributed network comprising many voluntarily interconnected autonomous networks.
+		<ul>
+			<li>ISOC is a voluntary membership organization whose purpose is to promote global information exchange through Internet technology.</li>
+			<li>ISOC appoints the IAB- Internet Architecture Board. They meet regularly to review standards and allocate resources, like addresses.</li>
+			<li>IETF- Internet Engineering Task Force. Another volunteer organization that meets regularly to discuss operational and technical problems.Internet services were launched in India on 15th August, 1995 by Videsh Sanchar Nigam Limited. In November, 1998, the Government opened up the sector for providing Internet services by private operators.</li>
+		</ul>
+	</p>
+	</br>
+    	<h4>Layered Architicture</h4>
+	<p>
+		MODERN USES OF INTERNET
+		<ul>
+			<li>The internet can be accessed almost anywhere by numerous means including mobile internet services.</li>
+			<li>The Internet allows computer users to remotely access other computers and information stores easily, wherever they may be.</li>
+		</ul>
+	<p>
+	</br>
+	<h4>IP-TCP</h4>
+	<p>
+		IP Protocol
+		<ul>
+			<li>A simple protocol for attempting to send data between two computers</li>
+			<li>Each device has a 32-bit IP address written as four 8-bit numbers (0-255)</li>
+			<li>Find out your internet IP address: whatismyip.com</li>
+			<li>Find out your local IP address: in a terminal, type: ipconfig (Windows) or ifconfig (Mac/Linux)</li>
+		</ul>
+	</p>
+	</br>
+	<p>
+		Transmission Control Protocol (TCP)
+		<ul>
+			<li>adds multiplexing, guaranteed message delivery on top of IP</li>
+			<li>multiplexing: multiple programs using the same IP address</li>
+			<li>port: a number given to each program or service</li>
+			<li>port 80: web browser (port 443 for secure browsing)</li>
+			<li>port 25: email</li>
+			<li>port 22: ssh</li>
+			<li>port 5190: AOL Instant Messenger</li>
+			<li>more common ports</li>
+			<li>some programs (games, streaming media programs) use simpler UDP protocol instead of TCP.</li>
+			<li>UDP is faster than TCP, Connectionless, Unreliable communication and used for sending short messages</li>
+		</ul>
+	</p>
+    	<h4>WWW - World wide web</h4>
+	<p>
+		World Wide Web
+		<ul>
+			<li>The Web is a only way to access information through the Internet.</li>
+			<li>The world wide web is a sophisticated system for universal information capture and delivery.</li>
+			<li>The Web is a large number of computer documents or "Web pages" that are stored on computers around the world and are connected to one another using hyperlinks. These Web pages can be seen by anyone through their computer's "Web Browser," which is the program you are using now.</li>
+			<li>A group of Web pages that follow the same theme and are connected together with hyperlinks is called a "Web site." Web sites and Web pages are written in a coding language that makes it possible to add pictures, sound and interactivity to plain old text, making people's reading experience more exciting</li>
+		</ul>
+	</p>
+    	<h4>Web Server and Browsers</h4>
+	<p>
+		Web Servers
+		<ul>
+			<li>A web server is a computer with special software to host web pages and web applications.</li>
+			<li>A web server serves web pages to clients across the Internet or an Intranet. The web server hosts the pages, scripts, programs, and multimedia files and serves them using HTTP, a protocol designed to send files to web browsers and other protocols.</li>
+			<li>A number of server-side technologies can be used to increase the power of the server beyond its ability to deliver standard HTML pages.</li>
+			<li>These include CGI scripts, server-side includes, SSL security, and Active Server Pages(ASPs)</li>
+		</ul>
+	</p>
+	</br>
+	<p>
+		Web browsers 
+		<ul>
+			<li>Web browsers are programs used to explore the Internet. Software that creates a unique hypermedia-based menu on your computer screen and provides a graphical interface to the Web.</li>
+			<li>There are many Web browser programs available including Netscape Navigator, Internet Explorer and Opera, Google Chrome, Mozilla Firefox.</li>
+		</ul>
+	</p>
+    	<h4>Web Protocols</h4>
+	<p>
+		A protocol is simply a standard for enabling the connection, communication,and data transfer between two places on a network. Here are some of the keyprotocols that are used for transferring data across the Internet.
+		<ul>
+			<li>HTTP : Hypertext Transfer Protocol. It is the standard protocol fortransferring web pages (and their content) across the Internet.</li>
+			<li>HTTPS : Hypertext Transfer Protocol over Secure Socket Layer (SSL). For awebsite to use HTTPS it needs to have an SSL certificate installed on theserver. These are usually issued by a trusted 3rd party, referred to as aCertificate Authority (CA). When you browse a web page using HTTPS, youcan check the details of the SSL certificate. For example, you could check thevalidity of it.</li>
+			<li>FTP : File Transfer Protocol. It is used to transfer files across the Internet.FTP is commonly used by web developers to publish updates to a website(i.e. to upload a new version of the website).</li>
+			<li>Every HTTP request also uses TCP and IP. The Web is just one of theapplications built on top of the Internet protocols.</li>
+		</ul>
+	</p>
+    	<h4>DNS - URL</h4>
+	<p>
+		DNS
+		<ul>
+			<li>The domain name system (DNS) gives us humans an easy way to identify where we want to go on the Internet.</li>
+			<li>Behind the scenes, each domain name maps to an IP address. When we type a URL in the address bar of our browser, the computer has to figure out its IP address.</li>
+			<li>Consider the website: blog.gardeningknowhow.com</li>
+			<li>That URL leads to the blog of a gardening tips & tricks website.</li>
+			<li>First level domain – com</li>
+			<li>Third level domain – blog</li>
+		</ul>
+	</p>
+	<p>
+		URL
+		<br>
+    		A Uniform Resource Locator (URL), colloquially termed a web address, is a reference to a web resource that specifies its location on a computer network and a mechanism for retrieving it. A URL is a specific type of Uniform Resource Identifier (URI), although many people use the two terms interchangeably. URLs occur most commonly to reference web pages (http) but are also used for file transfer (ftp), email (mailto), database access (JDBC), and many other applications. Most web browsers display the URL of a web page above the page in an address bar. A typical URL could have the form http://www.example.com/index.html, which indicates a protocol (http), a hostname (www.example.com), and a file name (index.html).
+	</p>
+    	<h4>Web standerds</h4>
+    	<h4>Audience Requirements</h4>
 </body>
 </html>
