--- a/db.html
+++ b/db.html
@@ -1,22 +1,125 @@
 <!doctype html>
 <html lang="en">
-  <head>
+<head>
     <title>Title</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  </head>
-  <body>
-    <ul>Introduction to MYSQL queries</ul>
-    <ul>Performing Database CRUD operations with JSP</ul>
-    <ul>MYSQL Connectivity</ul>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  </body>
+    <link rel="stylesheet" href="Subtopic_style.css">
+</head>
+<body>
+	<h2>Introduction to MYSQL queries</h2>
+		<h4>Introduction</h4>
+			Databases are a key component of many websites and applications, and are at the core of how data is stored and exchanged across the internet. One of the most important aspects of database management is the practice of retrieving data from a database, whether it’s on an ad hoc basis or part of a process that’s been coded into an application. There are several ways to retrieve information from a database, but one of the most commonly-used methods is performed through submitting queries through the command line.
+			<br><br>
+			In relational database management systems, a query is any command used to retrieve data from a table. In Structured Query Language (SQL), queries are almost always made using the SELECT statement.
+			<br><br>
+			In this guide, we will discuss the basic syntax of SQL queries as well as some of the more commonly-employed functions and operators. We will also practice making SQL queries using some sample data in a MySQL database.
+			<br><br>
+			MySQL is an open-source relational database management system. One of the most widely-deployed SQL-databases, MySQL prioritizes speed, reliability, and usability. It generally follows the ANSI SQL standard, although there are a few cases where MySQL performs operations differently than the recognized standard.
+			<br><br>
+		<h4>Prerequisites</h4>
+			In general, the commands and concepts presented in this guide can be used on any Linux-based operating system running any SQL database software. However, it was written specifically with an Ubuntu 18.04 server running MySQL in mind. To set this up, you will need the following:
+			<br><br>
+			An Ubuntu 18.04 machine with a non-root user with sudo privileges. This can be set up using our Initial Server Setup guide for Ubuntu 18.04.
+			MySQL installed on the machine. Our guide on How to Install MySQL on Ubuntu 18.04 can help you set this up.
+			With this setup in place, we can begin the tutorial.
+			<br><br>
+		<h4>Creating a Sample Database</h4>
+			Before we can begin making queries in SQL, we will first create a database and a couple tables, then populate these tables with some sample data. This will allow you to gain some hands-on experience when you begin making queries later on.
+			<br><br>
+			For the sample database we’ll use throughout this guide, imagine the following scenario:
+			<br><br>
+			You and several of your friends all celebrate your birthdays with one another. On each occasion, the members of the group head to the local bowling alley, participate in a friendly tournament, and then everyone heads to your place where you prepare the birthday-person’s favorite meal. Now that this tradition has been going on for a while, you’ve decided to begin tracking the records from these tournaments. Also, to make planning dinners easier, you decide to create a record of your friends’ birthdays and their favorite entrees, sides, and desserts. Rather than keep this information in a physical ledger, you decide to exercise your database skills by recording it in a MySQL database.
+			<br><br>
+			To begin, open up a MySQL prompt as your root MySQL user. Next, create the database by running:
+			<br>
+			<center>CREATE DATABASE `birthdays`;</center>
+			<br><br>
+			Then select this database by typing:
+			<br>
+			<center>USE birthdays;</center>
+			<br><br>
+			Next, create two tables within this database. We’ll use the first table to track your friends’ records at the bowling alley. The following command will create a table called tourneys with columns for the name of each of your friends, the number of tournaments they’ve won (wins), their all-time best score, and what size bowling shoe they wear (size):
+			<br>
+			<center>
+			CREATE TABLE tourneys (<br>
+			name varchar(30),<br>
+			wins real,<br>
+			best real,<br>
+			size real<br>
+			);<br>
+			</center>
+			<br>
+			Once you run the CREATE TABLE command and populate it with column headings, you’ll receive the following output:
+			<br>
+			<center>
+			Output<br>
+			Query OK, 0 rows affected (0.00 sec)<br>
+			</center>
+			<br><br>
+			Populate the tourneys table with some sample data:
+			<br>
+			<center>
+			INSERT INTO tourneys (name, wins, best, size)<br>
+			VALUES ('Dolly', '7', '245', '8.5'),<br>
+			('Etta', '4', '283', '9'),<br>
+			('Irma', '9', '266', '7'),<br>
+			('Barbara', '2', '197', '7.5'),<br>
+			('Gladys', '13', '273', '8');<br>
+ 			</center>
+			<br><br>
+			You’ll receive an output like this:
+			<br>
+			<center>
+			Output<br>
+			Query OK, 5 rows affected (0.01 sec)<br>
+			Records: 5  Duplicates: 0  Warnings: 0<br>
+			</center>
+			<br>
+			Following this, create another table within the same database which we’ll use to store information about your friends’ favorite birthday meals. The following command creates a table named dinners with columns for the name of each of your friends, their birthdate, their favorite entree, their preferred side dish, and their favorite dessert:
+			<br>
+			<center>
+			CREATE TABLE dinners (<br>
+			name varchar(30),<br>
+			birthdate date,<br>
+			entree varchar(30),<br>
+			side varchar(30),<br>
+			dessert varchar(30)<br>
+			);<br>
+			</center>
+			<br>
+			Similarly for this table, you’ll receive feedback confirming that the command ran successfully:
+			<br>
+			<center>
+			Output<br>
+			Query OK, 0 rows affected (0.01 sec)<br>
+			</center>
+			<br>
+			Populate this table with some sample data as well:
+			<br>
+			<center>
+			INSERT INTO dinners (name, birthdate, entree, side, dessert)<br>
+			VALUES ('Dolly', '1946-01-19', 'steak', 'salad', 'cake'),<br>
+			('Etta', '1938-01-25', 'chicken', 'fries', 'ice cream'),<br>
+			('Irma', '1941-02-18', 'tofu', 'fries', 'cake'),<br>
+			('Barbara', '1948-12-25', 'tofu', 'salad', 'ice cream'),<br>
+			('Gladys', '1944-05-28', 'steak', 'fries', 'ice cream');<br>
+ 			<br>
+			Output<br>
+			Query OK, 5 rows affected (0.00 sec)<br>
+			Records: 5  Duplicates: 0  Warnings: 0<br>
+			</center>
+			<br>
+			Once that command completes successfully, you’re done setting up your database.
+    		<h4>Performing Database CRUD operations with JSP</h4>
+    		<h4>MYSQL Connectivity</h4>
+    	<!-- Optional JavaScript -->
+    	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+</body>
 </html>
