--- a/HTML5/index.html
+++ b/HTML5/index.html
@@ -24,22 +24,22 @@
         <br>
         <li>What is HTML?</li>
         <br>
-        &nbsp; &nbsp; &nbsp; &nbsp; HTML is a language for describing Web pages.
+        &nbsp; &nbsp; &nbsp;&nbsp; HTML is a language for describing Web pages.
         <br>
         <ul>HTML stands for HyperText Markup Language.</ul>
         <ul>HTML is not a programming language, it is a markup language.</ul>
         <ul>A markup language is a collection of markup tags.</ul>
         <ul>HTML uses markup tags to describe Web pages.</ul>
-        What are Tags?
-        -	HTML markup tags are usually called HTML tags or just tags.
-        -	HTML tags are keywords surrounded by angle brackets like <html>.
-        -	HTML tags normally come in pairs, like <b> and </b>.
-        -	The first tag in a pair is the start tag; the second tag is the end tag.
-        -	Start and end tags are also called opening tags and closing tags.
-        HTML Documents = Web Pages
-        -	HTML documents describe Web pages.
-        -	HTML documents contain HTML tags and plain text.
-        -	HTML documents are also called Web pages.
+        <li>What are Tags?</li>
+        <ul>HTML markup tags are usually called HTML tags or just tags.</ul>
+        <ul>HTML tags are keywords surrounded by angle brackets like &lt;html&gt;.</ul>
+        <ul>HTML tags normally come in pairs, like &lt;b&gt; and &lt;/b&gt;.</ul>
+        <ul>The first tag in a pair is the start tag; the second tag is the end tag.</ul>
+        <ul>Start and end tags are also called opening tags and closing tags.</ul>
+        <li>What are HTML Documents?</li>
+        <ul>HTML documents describe Web pages.</ul>
+        <ul>HTML documents contain HTML tags and plain text.</ul>
+        <ul>HTML documents are also called Web pages.</ul>
         The purpose of a Web browser (like Internet Explorer or Mozilla Firefox) is to read 
         HTML documents and display them as Web pages. The browser does not display 
         the HTML tags, but uses the tags to interpret the content of the page. In your 
