--- a/css3.html
+++ b/css3.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="Subtopic_style.css">
 </head>
 <body>
     <li>
@@ -731,8 +732,7 @@ body {
 }  
 h1 { color: red; }  
 h2 { color: #9000A1; }   
-p { color:rgb(0, 220, 98); }   
-}  
+p { color:rgb(0, 220, 98); }     
 </style>  
 </head>  
 <body>  
@@ -771,7 +771,6 @@ font-size: 100%;
 h1 { font-family: sans-serif; }  
 h2 { font-family: serif; }   
 p { font-family: monospace; }   
-}  
 </style>  
 </head>  
 <body>  
@@ -874,7 +873,6 @@ font-size: 100%;
 h2 { font-style: italic; }  
 h3 { font-style: oblique; }  
 h4 { font-style: normal; }   
-}  
 </style>  
 </head>  
 <body>  
