--- a/HTML5/index.html
+++ b/HTML5/index.html
@@ -40,29 +40,37 @@
         <ul>HTML documents describe Web pages.</ul>
         <ul>HTML documents contain HTML tags and plain text.</ul>
         <ul>HTML documents are also called Web pages.</ul>
+        <br>
         The purpose of a Web browser (like Internet Explorer or Mozilla Firefox) is to read 
         HTML documents and display them as Web pages. The browser does not display 
-        the HTML tags, but uses the tags to interpret the content of the page. In your 
-        browser, it looks like figure I.1.
-        <html>
-        <body>
-        <h1>My First Heading</h1>
-        <p>My first paragraph</p>
-        </body>
-        </html>
-        In the previous code example,
-        -	The text between <html> and </html> describes the Web page.
-        -	The text between <body> and </body> is the visible page content.
-        -	The text between <h1> and </h1> is displayed as a heading.
-        -	The text between <p> and </p> is displayed as a paragraph.
-                    HTML Headings
-        HTML headings are defined with the <h1> to <h6> tags. The lower the number,
+        the HTML tags, but uses the tags to interpret the content of the page.
+        <br><br>
+        &lt;html&gt;<br>
+        &lt;body&gt;<br>
+        &lt;h1&gt;My First Heading&lt;/h1&gt;<br>
+        &lt;p&gt;My first paragraph&lt;/p&gt;<br>
+        &lt;/body&gt;<br>
+        &lt;/html&gt;
+        <br><br>
+        In the above code example,
+        <ul>The text between &lt;html&gt; and &lt;/html&gt; describes the Web page.</ul>
+        <ul>The text between &lt;body&gt; and &lt;/body&gt; is the visible page content.</ul>
+        <ul>The text between &lt;h1&gt; and &lt;/h1&gt; is displayed as a heading.</ul>
+        <ul>The text between &lt;p&gt; and &lt;/p&gt is displayed as a paragraph.</ul>
+        <h3 style="text-align: center;">HTML Headings</h3>
+        HTML headings are defined with the &lt;h1&gt; to &lt;h6&gt; tags. The lower the number,
         the larger the heading size.
-                    Try it yourself >>
+        &lt;html&gt;<br>
+        &lt;body&gt;<br>
+        &lt;h1&gt;This is Heading 1&lt;/h1&gt;<br>
+        &lt;h2&gt;Heading 2 is Smaller&lt;/h2&gt;<br>
+        &lt;h3&gt;Heading 3 is Smaller&lt;/h3&gt;<br>
+        &lt;/body&gt;<br>
+        &lt;/html&gt;
         <html>
         <body>
-        <h1>This is Heading 1</h1>
-        <h2>Heading 2 is Smaller</h2>
+        <h1></h1>
+        <h2></h2>
         <h3>Heading 3 is Smaller Still</h3>
         </body>
         </html>
