--- a/HTML5/index.html
+++ b/HTML5/index.html
@@ -64,35 +64,26 @@
         &lt;body&gt;<br>
         &lt;h1&gt;This is Heading 1&lt;/h1&gt;<br>
         &lt;h2&gt;Heading 2 is Smaller&lt;/h2&gt;<br>
-        &lt;h3&gt;Heading 3 is Smaller&lt;/h3&gt;<br>
+        &lt;h3&gt;Heading 3 is Smaller Still&lt;/h3&gt;<br>
         &lt;/body&gt;<br>
-        &lt;/html&gt;
-        <html>
-        <body>
-        <h1></h1>
-        <h2></h2>
-        <h3>Heading 3 is Smaller Still</h3>
-        </body>
-        </html>
-                    HTML Paragraphs
-        HTML paragraphs are defined with the <p> tag. Most browsers automatically put
-        a line break and space after a </p> tag.
-                    Try it yourself >>
-        <html>
-        <body>
-        <p>This is a paragraph.</p>
-        <p>This is a paragraph.</p>
-        <p>This is a paragraph.</p>
-        </body>
-        </html>
-                    HTML Links
-        HTML links are defined with the <a> tag.
-                    Try it yourself >>
-        <html>
-        <body>
-        <a href="https://github.com">This is a link .</a>
-        </body>
-        </html>
+        &lt;/html&gt;<br>
+        <h3> HTML Paragraphs</h3>
+        HTML paragraphs are defined with the &lt;p&gt; tag. Most browsers automatically put
+        a line break and space after a &lt;/p&gt; tag.
+        &lt;html&gt;<br>
+        &lt;body&gt;<br>
+        &lt;p&gt;This is a paragraph.&lt;/p&gt;
+        &lt;p&gt;This is a paragraph.&lt;/p&gt;
+        &lt;p&gt;This is a paragraph.&lt;/p&gt;
+        &lt;/body&gt;<br>
+        &lt;/html&gt;<br>
+        <h3>HTML Links</h3>
+        HTML links are defined with the &lt;a&gt; tag.
+        &lt;html&gt;<br>
+        &lt;body&gt;<br>
+        &lt;a href="https://github.com"&gt;This is a link .&lt;/a&gt;
+        &lt;/body&gt;<br>
+        &lt;/html&gt;<br>
                     HTML Images
         HTML images are defined with the <img> tag. It tells the browser where to find the
         image file and what size to display it, among other things.
