--- a/afterhome.html
+++ b/afterhome.html
@@ -61,7 +61,7 @@
           <ul><a href="./server.html">Server Side Technologies: Servlet and JSP </a> </ul>
         </div>
         <div class="row">
-          <ul><a href="./db.html"> Database Connectivity</a></ul>
+          <ul><a href="./db/db.html"> Database Connectivity</a></ul>
         </div>
       </div>
     </div>
