--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <ul><a href="./HTML5/index.html">HTML 5</a></ul>
         </div>
         <div class="row">
-          <ul><a href="./css3.html">CSS 3</a></ul>
+          <ul><a href="./css3/css3.html">CSS 3</a></ul>
         </div>
         <div class="row">
           <ul><a href="./JavaScript_Basic_and_Objects.html">JavaScript Basics and Objects</a></ul>
