--- a/XML.html
+++ b/XML.html
@@ -11,14 +11,344 @@
   </head>
   <body>
       <ul>Introduction</ul>
-      <ul>XML document structure</ul>
-      <ul>Namespaces</ul>
+    <p>What is XML? 
+ XML stands for eXtensible Markup Language.
+ It is considered “extensible ” because it allows the developer to
+create new tags.
+ XML is a markup language much like HTML.
+ XML was designed to carry data, not to display data.
+ XML tags are not predefined.You must define your own tags.
+ XML is designed to be self-descriptive.
+ XML is a W3C Recommendation.
+
+The Difference Between XML and HTML 
+ XML is not a replacement for HTML.
+ XML and HTML were designed with different goals:
+1. XML was designed to transport and store data, with focus on what data is.
+2. HTML was designed to display data, with focus on how data looks.
+3. XML tags are not predefined.You must define your own tags. (<author>)
+4. HTML tags are predefined. (<h1>,<p>)
+5. In HTML, elements do not have to have a closing tag:<p>This is a paragraph.
+6. In XML, it is illegal to omit the closing tag. All elements must have a closing tag:
+<p>This is a paragraph</p>
+7. XML tags are case sensitive. The tag <Letter> is different from the tag
+<letter>.
+8. In XML, the attribute values must always be quoted.(Either single or double
+quotes) Eg: <note date="12/11/2007">
+
+Example
+ The following example is a note to Tony, from Peter, stored as XML:
+<note>
+<to>Tony</to>
+<from>Peter</from>
+<heading>Reminder</heading>
+<body>Don't forget me this weekend!</body>
+</note>
+ The note above is quite self descriptive. It has sender and receiver
+information, it also has a heading and a message body.
+ But still, this XML document does not DO anything. It is just
+information wrapped in tags. Someone must write a piece of software
+to send, receive or display it</p>
+      <ul>XML DOM</ul>
+<p>
+What is XML DOM-
+DOM is an acronym stands for Document Object Model. It defines a standard way to access and manipulate documents. 
+The Document Object Model (DOM) is a programming API for HTML and XML documents. 
+It defines the logical structure of documents and the way a document is accessed and manipulated.
+
+As a W3C specification, one important objective for the Document Object Model is to provide a standard programming interface that 
+can be used in a wide variety of environments and applications. The Document Object Model can be used with any programming language.
+
+XML DOM defines a standard way to access and manipulate XML documents.
+
+What does XML DOM
+The XML DOM makes a tree-structure view for an XML document.
+
+We can access all elements through the DOM tree.
+
+We can modify or delete their content and also create new elements. The elements, their content (text and attributes) are all known as nodes.
+XML DOM Example : Load XML File
+Let's take an example to show how an XML document ("note.xml") is parsed into an XML DOM object.
+
+This example parses an XML document (note.xml) into an XML DOM object and extracts information from it with JavaScript.
+
+Let's see the XML file that contains message.
+
+<?xml version="1.0" encoding="ISO-8859-1"?>    
+<note>    
+  <to>sonoojaiswal@gmail.com</to>    
+  <from>vimal@gmail.com</from>    
+  <body>Hello XML DOM</body>    
+</note>    
+Let's see the HTML file that extracts the data of XML document using DOM.
+
+
+
+<!DOCTYPE html>  
+<html>  
+<body>  
+<h1>Important Note</h1>  
+<div>  
+<b>To:</b> <span id="to"></span><br>  
+<b>From:</b> <span id="from"></span><br>  
+<b>Message:</b> <span id="message"></span>  
+</div>  
+<script>  
+if (window.XMLHttpRequest)  
+  {// code for IE7+, Firefox, Chrome, Opera, Safari  
+  xmlhttp=new XMLHttpRequest();  
+  }  
+else  
+  {// code for IE6, IE5  
+  xmlhttp=new ActiveXObject("Microsoft.XMLHTTP");  
+  }  
+xmlhttp.open("GET","note.xml",false);  
+xmlhttp.send();  
+xmlDoc=xmlhttp.responseXML;  
+document.getElementById("to").innerHTML=  
+xmlDoc.getElementsByTagName("to")[0].childNodes[0].nodeValue;  
+document.getElementById("from").innerHTML=  
+xmlDoc.getElementsByTagName("from")[0].childNodes[0].nodeValue;  
+document.getElementById("message").innerHTML=  
+xmlDoc.getElementsByTagName("body")[0].childNodes[0].nodeValue;  
+</script>  
+</body>  
+</html>   
+
+
+Important Note
+To: sonoojaiswal@gmail.com
+From: vimal@gmail.com
+Message: Hello XML DOM
+XML DOM Example : Load XML String
+This example parses an XML string into an XM DOM object and then extracts some information from it with a JavaScript.
+
+Let's see the HTML file that extracts the data of XML string using DOM.
+
+xmldom.html
+
+<!DOCTYPE html>  
+<html>  
+<body>  
+<h1>Important Note2</h1>  
+<div>  
+<b>To:</b> <span id="to"></span><br>  
+<b>From:</b> <span id="from"></span><br>  
+<b>Message:</b> <span id="message"></span>  
+</div>  
+<script>  
+txt1="<note>";    
+txt2="<to>Sania Mirza</to>";    
+txt3="<from>Serena William</from>";    
+txt4="<body>Don't forget me this weekend!</body>";    
+txt5="</note>";    
+txt=txt1+txt2+txt3+txt4+txt5;  
+  
+if (window.DOMParser)  
+  {  
+  parser=new DOMParser();  
+  xmlDoc=parser.parseFromString(txt,"text/xml");  
+  }  
+else // Internet Explorer  
+  {  
+  xmlDoc=new ActiveXObject("Microsoft.XMLDOM");  
+  xmlDoc.async=false;  
+  xmlDoc.loadXML(txt);  
+  }  
+document.getElementById("to").innerHTML=  
+xmlDoc.getElementsByTagName("to")[0].childNodes[0].nodeValue;  
+document.getElementById("from").innerHTML=  
+xmlDoc.getElementsByTagName("from")[0].childNodes[0].nodeValue;  
+document.getElementById("message").innerHTML=  
+xmlDoc.getElementsByTagName("body")[0].childNodes[0].nodeValue;  
+</script>  
+</body>  
+</html></p>  
+<ul>Namespaces</ul>
+<p>What is Namespace?
+ An XML namespace is a collection of names that are identified
+by a Uniform Resource Identifier (URI) reference, which are
+used in XML documents as element types and attribute names.
+ You might find it easier to think of a namespace as a dictionary
+that is a source of definitions for items that you use within an
+XML document.
+ Example: XML Schema
+xmlns:xsd=http://www.w3.org/2001/XMLSchema-instance
+ It would mainly be used to avoid naming conflicts.
+Namespace Structure
+Let's see the XML namespace syntax:
+<element xmlns:name = "URL">  
+<Organization
+ xmlns:addr=”http://www.example.com/addresses”
+ xmlns=”http://www.example.com/files”>
+ The first declaration associates the addr prefix with the
+“www.example.com/addresses” URI.
+ The second declaration defines www.example.com/files as the
+default namespace. If there is not a prefix defined for that element, a
+default namespace is applied.
+ <highschool:subject>Geometry</highschool:subject>
+and
+ <medicalschool:subject>Cardiology</medicalschool:subject>
+
+Namespace Best Practices
+ Try to limit the number of Namespaces to about 5 per document.
+More than five namespaces in a document gets unwieldy.
+ Make distinctions in XML namespaces only when there are truly
+distinctions between the things being named.
+ Try to stick to documents in namespace normal form wherever
+possible because they are simplest to read and to process.
+ Avoid overriding namespaces frequently because it can cause
+ confusion in your documents</p>
       <ul>XSD</ul>
-      <ul>XSLT</ul>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<p>
+XML Schema is commonly known as XML Schema Definition (XSD). 
+It is used to describe and validate the structure and the content of XML data. 
+XML schema defines the elements, attributes and data types. 
+Schema element supports Namespaces. It is similar to a database schema that describes the data in a database.
+
+Syntax
+You need to declare a schema in your XML document as follows −
+Example:<?xml version = "1.0" encoding = "UTF-8"?>
+<xs:schema xmlns:xs = "http://www.w3.org/2001/XMLSchema">
+<xs:element name = "contact">
+<xs:complexType>
+<xs:sequence>
+<xs:element name = "name" type = "xs:string" />
+<xs:element name = "company" type = "xs:string" />
+<xs:element name = "phone" type = "xs:int" />
+</xs:sequence>
+</xs:complexType>
+</xs:element>
+</xs:schema>
+
+Elements-
+As we saw in the XML - Elements chapter, elements are the building blocks of XML document.
+An element can be defined within an XSD as follows −
+
+<xs:element name = "x" type = "y"/>
+Definition Types
+You can define XML schema elements in the following ways −
+
+Simple Type
+Simple type element is used only in the context of the text. Some of the predefined simple types are: xs:integer, xs:boolean, xs:string, xs:date. For example −
+
+<xs:element name = "phone_number" type = "xs:int" />
+Complex Type
+A complex type is a container for other element definitions. This allows you to specify which child 
+elements an element can contain and to provide some structure within your XML documents. For example −
+
+<xs:element name = "Address">
+<xs:complexType>
+<xs:sequence>
+<xs:element name = "name" type = "xs:string" />
+<xs:element name = "company" type = "xs:string" />
+<xs:element name = "phone" type = "xs:int" /> 
+</xs:sequence> 
+</xs:complexType>
+</xs:element> 
+In the above example, Address element consists of child elements. This is a container for other <xs:element> definitions, 
+that allows to build a simple hierarchy of elements in the XML document.
+
+Global Types
+With the global type, you can define a single type in your document, which can be used by all other references. 
+For example, suppose you want to generalize the person and company for different addresses of the company. In such case, you can define a general type as follows −
+
+<xs:element name = "AddressType">
+<xs:complexType>
+<xs:sequence>
+<xs:element name = "name" type = "xs:string" />
+<xs:element name = "company" type = "xs:string" />
+</xs:sequence> 
+</xs:complexType>
+</xs:element> 
+Now let us use this type in our example as follows −
+
+<xs:element name = "Address1">
+<xs:complexType>
+<xs:sequence>
+<xs:element name = "address" type = "AddressType" />
+<xs:element name = "phone1" type = "xs:int" /> 
+</xs:sequence> 
+</xs:complexType>
+</xs:element> 
+
+<xs:element name = "Address2">
+<xs:complexType>
+<xs:sequence>
+<xs:element name = "address" type = "AddressType" />
+<xs:element name = "phone2" type = "xs:int" /> 
+</xs:sequence> 
+</xs:complexType>
+</xs:element> 
+Instead of having to define the name and the company twice (once for Address1 and once for Address2), we now have a single definition. 
+This makes maintenance simpler, i.e., if you decide to add "Postcode" elements to the address, you need to add them at just one place.
+
+Attributes
+Attributes in XSD provide extra information within an element. Attributes have name and type property as shown below −
+
+<xs:attribute name = "x" type = "y"/></p>
+<ul>XSLT</ul>
+<p>XSLT
+ XSLT stands for XSL Transformations
+ XSLT is a language for transforming XML documents into
+XHTML documents or to other XML documents.
+ With XSLT you can add/remove elements and attributes to or
+from the output file. You can also rearrange and sort elements,
+perform tests and make decisions about which elements to hide
+and display, and a lot more.
+  
+Style Sheet Declaration
+ The root element that declares the document to be an XSL style 
+sheet is <xsl:stylesheet> or <xsl:transform>.
+ <xsl:stylesheet version="1.0"
+xmlns:xsl="http://www.w3.org/1999/XSL/Transform"> 
+
+XML File<?xml version="1.0" encoding="ISO-8859-1"?>
+<?xml-stylesheet type="text/xsl" href="cdcatalog.xsl"?>
+<catalog>
+<cd>
+<title>Empire Burlesque</title>
+<artist>Bob Dylan</artist>
+<country>USA</country>
+<company>Columbia</company>
+<price>10.90</price>
+<year>1985</year>
+</cd> <cd>..</cd><cd>...</cd>
+</catalog>
+it will nicely transform your XML into XHTML
+
+XSLT File
+<?xml version="1.0" encoding="ISO-8859-1"?>
+<xsl:stylesheet version="1.0" 
+xmlns:xsl="http://www.w3.org/1999/XSL/Transform">
+<xsl:template match="/">
+<html>   <body>   <h2>My CD Collection</h2>
+<table border="1">
+<tr>         <th>Title</th>         <th>Artist</th>       </tr>
+<xsl:for-each select="catalog/cd">
+<tr>            <td><xsl:value-of select="title"/></td> 
+<td><xsl:value-of select="artist"/></td>       </tr>
+</xsl:for-each></table></body></html></xsl:template> </xsl:stylesheet>
+How XSLT Works
+The XSLT stylesheet is written in XML format. It is used to define the transformation rules to be applied on the target XML document. 
+The XSLT processor takes the XSLT stylesheet and applies the transformation rules on the target XML document and then it generates a formatted document 
+in the form of XML, HTML, or text format. At the end it is used by XSLT formatter to generate the actual output and displayed on the end-user.
+Advantage of XSLT
+A list of advantages of using XSLT:
+
+XSLT provides an easy way to merge XML data into presentation because it applies user defined transformations to an XML 
+document and the output can be HTML, XML, or any other structured document.
+XSLT provides Xpath to locate elements/attribute within an XML document. So it is more convenient way to traverse an XML 
+document rather than a traditional way, by using scripting language.
+XSLT is template based. So it is more resilient to changes in documents than low level DOM and SAX.
+By using XML and XSLT, the application UI script will look clean and will be easier to maintain.
+XSLT templates are based on XPath pattern which is very powerful in terms of performance to process the XML document.
+XSLT can be used as a validation language as it uses tree-pattern-matching approach.
+You can change the output simply modifying the transformations in XSL files.</p>
+<!-- Optional JavaScript -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </body>
 </html>
